# ai_voice_assistant_tg_bot

./: .flake8  .pre-commit-config.yaml  README.md  ai_voice_bot.py  assistant_ai.py  pyproject.toml
